<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/action_friends"
        android:enabled="true"
        android:title="Friends"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_findFriends"
        android:enabled="true"
        android:title="Find Friends"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_request"
        android:enabled="true"
        android:title="Requests" />
    <item
        android:id="@+id/action_feed"
        android:enabled="true"
        android:title="Feed"/>
    <item
        android:id="@+id/action_trade"
        android:enabled="true"
        android:title="Collectibles"/>

</menu>
