...
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/loginTextBG"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_alignBottom="@+id/loginUser"
        android:layout_alignTop="@+id/loginUser"
        android:layout_toRightOf="@+id/loginUser"
        app:layout_constraintBottom_toBottomOf="@+id/loginUser"
        app:layout_constraintLeft_toLeftOf="@+id/loginUser"
        app:layout_constraintRight_toRightOf="@+id/loginUser"
        app:layout_constraintTop_toTopOf="@+id/loginUser"
...
        app:layout_constraintRight_toRightOf="parent"
        app:srcCompat="@drawable/ic_facenews"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/loginTitle" />

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:background="@color/backgroundlight"
        android:fontFamily="sans-serif"
        android:text="Log In"
...
