...
        android:id="@+id/action_geomap"
        android:enabled="false"
        android:icon="@drawable/ic_geomap"
        android:title="@string/geomap_desc"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_social"
        android:enabled="true"
        android:icon="@drawable/ic_social"
        android:title="@string/social_image_desc"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_newevent"
...
